sort.basic.bubble.AlgBubbleSort1.scala.error
Erreur de compilation :
AlgBubbleSort1:3: error: not found: type int
  var n:int=getNombreValeurs() 
        ^AlgBubbleSort1:6: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      return false
             ^AlgBubbleSort1:6: warning: enclosing method testSort has result type Unit: return value discarded
      return false
      ^AlgBubbleSort1:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return true
         ^AlgBubbleSort1:8: warning: enclosing method testSort has result type Unit: return value discarded
  return true
  ^AlgBubbleSort1:15: error: not found: type int
  var n:int=getNombreValeurs() 
        ^