sort.basic.bubble.AlgBubbleSort1.scala.code
def testSort() {
  var n:int=getNombreValeurs() 
  for(i<-1 to n-1) {
  	if(plusPetit(i-1, i)==false){
    	return false
  }}
  return true
 
}



def bubbleSort()  {
  var n:int=getNombreValeurs() 
  while(testSort()==true){
  	for(i<-1 to n-1) {
    	if (plusPetit(i-1, i)==false ){
      	echange(i-1, i)} 
   }
  }
}